# adr

./: .gitignore  Cargo.toml  address_cases.json  house_footers.txt  house_list.json
src/: core.rs  envelope.rs  executive.rs  house.rs  mailing.rs  main.rs  main_prv2.rs  mainprv.rs  mainprv1.rs  military.rs  models.rs  nasa.rs  prsr.rs  senate.rs  state.rs  usps.rs  usps_prv.rs
