[package]
name = "adr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
usps-oauth-sdk = { git = "https://github.com/rana/usps-oauth-sdk.git", version = "3.0.1" }
usps-addresses-sdk = { git = "https://github.com/rana/usps-addresses-sdk.git", version = "3.0.2" }
regex = "1.10.4"
